crates/alloy-provider/tests/trybuild/no_async_signer.stderr
error[E0277]: the trait bound `RpcAlloyProvider: AsyncSigner` is not satisfied
 --> tests/trybuild/no_async_signer.rs:6:19
  |
6 |     assert_impl::<RpcAlloyProvider>();
  |                   ^^^^^^^^^^^^^^^^ the trait `Signer` is not implemented for `RpcAlloyProvider`
  |
  = note: required for `RpcAlloyProvider` to implement `AsyncSigner`
note: required by a bound in `assert_impl`
 --> tests/trybuild/no_async_signer.rs:5:23
  |
5 |     fn assert_impl<T: AsyncSigner>() {}
  |                       ^^^^^^^^^^^ required by this bound in `assert_impl`
